task3/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-dp
  labels:
    app: simple-app-dp
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
      - name: hello-world-app
        image: alexmitenev/otus-simple-app:1.0.2
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
