task3/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
  labels:
    app: dev
spec:
  selector:
    app: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
